banner-styles.css
/* 
 * MAA website banner CSS
 * @author Rolando Henry, New Media Specialist
 *
 */
#home-banner {
	height: 185px;
	margin: 0 auto;
	overflow: hidden;
	position: relative;
	width: 980px;
}

#home-banner * {
	margin: 0;
	padding: 0;
}

#home-banner #banner-backgrounds {
	height: 185px;
}

#home-banner .bg-image {
	display: none;
	left: 0;
	position: absolute;
	top: 0;
}

#home-banner .default-image {
	display: block;
}

#home-banner .banner-expand {
	background: #226da7 url(images/expand-arrow.png) no-repeat 95% -20px;
	color: #fff;
	font-family: Verdana, sans-serif;
	font-size: 10px;
	height: 24px;
	line-height: 2.5;
	padding: 0 25px 0 5px;
	position: absolute;
	right: 33px;
	text-decoration: none;
	text-transform: uppercase;
	top: 162px;
	width: 80px;
	z-index: 60;
}

#home-banner .expanded {
	background-position: 95% 5px;
}

#home-banner .banner-overlay {
	background: url(images/banner-overlay.png) no-repeat left top;
	height: 385px;
	position: relative;
	top: -185px;
	z-index: 50;
}

#home-banner .banner-overlay:hover {
	cursor: pointer;
}

#home-banner .banner-text {
	color: #fff;
	left: 25px;
	position: absolute;
	text-shadow: 1px 1px 4px rgba(4, 4, 4, 0.8);
	top: 62px;
	width: 200px;
	font: 40px/1 "Myriad Pro", Arial, sans-serif;
}

#home-banner #banner-bottom {
	background: url(images/bottom-overlay.png) repeat left top;
	background: rgba(0,0,0,0.7);
	display: none;
	height: 200px;
	position: absolute;
	top: 185px;
	width: 100%;
	z-index: 70;
}

#home-banner .banner-content {
	color: #fff;
	font: 13px/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: 300;
	list-style: none;
	margin: 0 0 0 140px;
	overflow: hidden;
}

#home-banner .banner-content li,
#home-banner .banner-content .column {
	float: left;
	margin-right: 25px;
}

#home-banner .banner-content .info {
	font-size: 16px;
	padding: 20px 50px 0 0;
	width: 549px;
}
#home-banner .banner-content .info p {
	margin-bottom: 10px;
}

#home-banner .banner-content a {
	color: #c6daf9;
}
#home-banner .banner-content a:hover {
	color: #993300;
}

#home-banner .banner-content .thumb {
	background-position: left 20px;
	background-repeat: no-repeat;
	color: #fff;
	display: block;
	height: 50px;
	padding: 155px 0 0 0;
	text-decoration: none;
	width: 183px;
	-webkit-transition: background 0.6s ease-out;
	-moz-transition: background 0.6s ease-out;
	transition: background 0.6s ease-out;
}

#home-banner .banner-content .thumb:hover {
	background-color: #4d4f53;
	color: #fff;
}

#home-banner .banner-content .arrows {
	background: url(images/expand-arrow.png) no-repeat 167px -52px;
	display: block;
	padding: 0 3px;
	width: 100%;
}

#home-banner .banner-content .link1 {
	background-image: url(images/banner-link1.jpg);
}
#home-banner .banner-content .link2 {
	background-image: url(images/banner-link2.jpg);
}
#home-banner .banner-content .link3 {
	background-image: url(images/banner-link3.jpg);
}
#home-banner .banner-content .link4 {
	background-image: url(images/banner-link4.jpg);
}
#home-banner .banner-content .imoe-link {
	background-image: url(images/imoe-link.jpg);
}
#home-banner .banner-content .ocad-link {
	background-image: url(images/ocad-link.jpg);
}
#home-banner .banner-content .naaf-link {
	background-image: url(images/naaf-thumb-link.jpg);
}

#banner-controls {
	font: 10px/2.5 Verdana, Arial, sans-serif;
	position: absolute;
	left: 5px;
	top: 162px;
	width: 200px;
	text-transform: uppercase;
	z-index: 100;
}

#banner-controls a {
	background: #226da7;
	color: #fff;
	padding: 5px;
	text-decoration: none;
}

#banner-controls a.active,
#banner-controls a:hover,
#home-banner .banner-expand:hover {
	background-color: #999;
	background-color: rgba(156,156,156,0.8);
}

#banner-controls div {
	float: left;
}

#banner-controls li {
	float: left;
	list-style: none;
	margin-right: 4px;
}

.info-title {
	font-size: 18px;
	text-transform: uppercase;
}

.imoe-line {
	border-top: 3px solid;
}

.hide { display: none; }

.accessible {
	height:1px;
	overflow:hidden; 
	position:absolute;
	top:auto;
	width:1px;
}

